# md5_speed

./: Cargo.toml
benches/: benchmarks.rs
src/: lib.rs
