[package]
name = "md5_speed"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
md-5 = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "benchmarks"
harness = false
